---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 0",
    "private parameters indices : [0]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) -1 ]",
    "",
    ""
  ],
  "debug_symbols": "TYxLCsMwDAXvonUWKaUUfJVSgj9yEBjZyHahmNy9SmggO80bNAMCur4uxDFXMK8BKXvbKLPSgPmYarG8U21WGpj7bQLkoMdzmyBSQjCPeXsrOKGUaF2uEZ0/Vsi6hH+Mnf3Ftm85zflfJHsMXXAvHU7zPw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    assert(x == 1);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
